src/styles/Product.css
.product-card {
  width: 450px;
  min-height: 450px;
  color: #fff;
  border-color: black;
  border-width: 2rem;
  border-radius: 18px;
  filter: drop-shadow(0 0 0.50rem rgb(31, 34, 37));
  margin: 32px auto;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  position: relative;
  transition: 0.3s ease-in-out;
  background: rgb(30, 32, 34);
}

.product-info {
  padding: 10px;
}

.product-card:hover {
  transform: translateY(-20px);
}

.image-container {
  text-align: center;
  background: radial-gradient(farthest-corner at 90% 0%, rgb(56, 60, 63) 5%, #00000000 50%);
  border-radius: 18px;
}

.product-image {
  width: 300px;
  height: 300px;
  object-fit: contain;
  margin-bottom: 10px;
  margin-top: 5px;
  border-radius: 16px;
}

.product-title {
  min-height: 75px;
  text-align: center;
  font-size: 2rem;
  font-weight: 600;
}

.product-price {
  text-align: center;
  font-size: 2rem;
  font-weight: 700;
  color: #8f6aff;
}

.product-description {
  text-align: justify;
  font-family: 'Courier New', Courier, monospace;
  font-size: 1rem;
  font-weight: 550;
  color: #e0e0e0;
  margin-left: 5px;
  margin-right: 5px;
  margin-bottom: 24px;
  display: -webkit-box;
  -webkit-line-clamp: 3;     /* limit to 3 lines */
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
}

.product-footer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-left: 5px;
  padding-right: 5px;
}

.product-category {
  background-color: #6b50e0;
  width: max-content;
  border-radius: 10px;
  padding: 0px 5px;
  border-color: #8f6aff;
  font-size: 1.2rem;
  line-height: 1.6;
}

.remove-btn {
  background: #8f6aff;
  color: #fff;
  border: none;
  border-radius: 8px;
  padding: 8px 20px;
  font-size: 1rem;
  font-weight: 600;
  cursor: pointer;
  transition: background 0.2s;
}

.remove-btn:hover {
  background: #6b50e0;
}

@media (max-width: 810px) {
  .product-holder {
    grid-template-columns: repeat(2, 1fr);
    width: 95%;
    gap: 20px;
  }
}

@media (max-width: 480px) {
  .product-holder {
    grid-template-columns: 1fr;
    width: 95%;
    gap: 16px;
  }
}

